--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <!-- <img src="assets/img/sports.jpg" alt="Online Cricket ID - Trusted Betting Platform" data-aos="fade-in"> -->
+      <img src="assets/img/sports.jpg" alt="Online Cricket ID - Trusted Betting Platform" data-aos="fade-in">
 
       <div class="container">
         <div class="row">
