--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Online Betting ID and Online Betting ID Provider Whatsapp Now</title>
   <meta name="description"
-    content="Online Betting ID & Online Cricket Betting ID both for online sports betting and Virat777 best online cricket betting id for cricket & casino players.">
+    content="Online Betting ID & Online Cricket Betting ID both for online sports betting and Mahakal Book best online cricket betting id for cricket & casino players.">
   <meta name="keywords"
     content="Online Betting id, Online Cricket Betting ID, Cricket Betting ID, best online betting id, online betting id provider">
   <meta property="og:description"
@@ -131,7 +131,7 @@
           <div class="col-lg-6" data-aos="fade-left">
             <h3>Betting on Cricket</h3>
             <p>Discover how cricket betting works, top platforms, and safe betting practices.</p>
-            <a href="#betting-on-cricket" class="btn-learn-more">Learn More</a>
+            <a href="/cricket-batting-id.html" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
@@ -142,8 +142,8 @@
             <a href="https://wa.me/919376374447" class="btn-learn-more">Get ID Now</a>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
-            <h3>Trusted Online ID Provider</h3>
-            <p>Why trust us? Read reviews, compare platforms, and secure your ID today.</p>
+            <h3>trusted online betting id</h3>
+            <p>Your Most Trusted Online Cricket ID Provider In India</p>
             <a href="#trusted-id" class="btn-learn-more">Discover More</a>
           </div>
         </div>
@@ -1179,6 +1179,24 @@
 
       </div>
     </div>
+    <div class="container additional-info text-center mt-4">
+      <h5>100% Reliable and Trusted Service</h5>
+      <p>
+        Mahakal Exchange is India's fastest-growing platform, offering a secure space to play and bet on cricket,
+        tennis, football, and over 200 casino games.
+      </p>
+      <p>
+        We are committed to responsible gaming, ensuring fair play and privacy protection. Our platform provides the
+        most trusted bet ID service, allowing you to enjoy live betting with real-time odds and exciting gameplay.
+      </p>
+      <p>
+        Enjoy a wide range of high-quality online gaming experiences with Mahakal. We bring you the thrill of casino
+        gaming with over 1500 international and 200 Indian casino games.
+      </p>
+      <h5>Disclaimer</h5>
+      <p><strong>Warning:</strong> Our services are strictly for educational and entertainment purposes only. We do not
+        support or promote gambling.</p>
+    </div>
 
     <div class="container copyright text-center mt-1">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Mahakal Online Book</strong> <span>All Rights
@@ -1188,8 +1206,10 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="https://wa.me/919376374447" class=" wtsp-chat wtsp-scroll d-flex align-items-center justify-content-center">
+    <img src="./assets/img/wtspchat.png" alt="online cricket id whatsapp number" class="wtsp-chat">
+  </a>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
