--- a/trusted-online-betting-id.html
+++ b/trusted-online-betting-id.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Online cricket batting id</title>
+    <title>trusted online betting id</title>
+    <meta property="og:title" content="Mahakal Book: Online Betting ID | Online Cricket ID | Get Betting ID" />
     <meta name="description"
-        content="Learn more about Mahakal Book, India's fastest-growing legal and fully licensed SportsBook and Online Cricket ID platform.">
+        content="Get online betting ID and online cricket ID at Mahakalbook. Get access to reliable bookie IDs for a amazin betting experience." />
     <meta name="keywords" content="Mahakal Book, Sports Betting, Online Cricket ID, Live Casino">
 
     <!-- Favicons -->
@@ -72,35 +73,77 @@
                 <div class="row">
                     <!-- Left Column: Content -->
                     <div class="col-lg-6">
-                        <h1 data-aos="fade-up">Welcome to the Best Online Cricket ID Platform</h1>
+                        <h1 data-aos="fade-up">Get Your Trusted Online Cricket ID – Fast & Secure</h1>
                         <p data-aos="fade-up" data-aos-delay="100">
-                            An <strong>Online Cricket ID</strong> is your gateway to secure and exciting cricket betting
-                            experiences. It allows you to place bets on matches while ensuring your privacy and
-                            security. Join the best platform and enjoy safe and instant access to online cricket
-                            betting.
+                            Welcome to the most <strong>trusted online cricket betting ID provider</strong> in India!
+                            Whether you want to bet on **IPL, World Cup, T20 Leagues, Test Matches**, or **Live Cricket
+                            Betting**, we offer a **secure and instant Cricket ID** that lets you bet hassle-free.
                         </p>
 
                         <h2 data-aos="fade-up" data-aos-delay="200">Why Choose Our Online Cricket ID?</h2>
-                        <ul data-aos="fade-up" data-aos-delay="300">
-                            <li>✅ **Instant Account Setup** – Quick and easy registration process.</li>
-                            <li>✅ **Secure & Trusted Platform** – Enjoy peace of mind with top-notch security.</li>
-                            <li>✅ **Exclusive Bonuses & Offers** – Get more value with our special promotions.</li>
-                            <li>✅ **24/7 Customer Support** – Reach out to our support team anytime for help.</li>
+                        <p data-aos="fade-up" data-aos-delay="300">
+                            With over **10+ years of experience**, we provide a **safe, verified, and feature-rich
+                            betting platform**. Here's what makes us stand out:
+                        </p>
+                        <ul data-aos="fade-up" data-aos-delay="400">
+                            <li>✅ **Instant Cricket ID Activation** – Register and start betting in **less than a
+                                minute**.</li>
+                            <li>✅ **100% Secure & Encrypted Platform** – Your **transactions & data** are fully
+                                protected.</li>
+                            <li>✅ **Access to IPL, World Cup, & T20 Leagues** – Bet on all **major cricket
+                                tournaments**.</li>
+                            <li>✅ **Multiple Betting Options** – Choose from **Live Betting, Fantasy Cricket, Casino
+                                Games, and More**.</li>
+                            <li>✅ **High Betting Limits & Best Odds** – Get **top industry rates** for maximum profit.
+                            </li>
+                            <li>✅ **Exclusive Welcome Bonuses & Cashback Offers** – Get rewarded with **amazing
+                                bonuses**.</li>
+                            <li>✅ **24/7 Customer Support via WhatsApp** – We are always available to assist you.</li>
                         </ul>
 
-                        <h2 data-aos="fade-up" data-aos-delay="400">How to Get Your Cricket ID?</h2>
-                        <p data-aos="fade-up" data-aos-delay="500">
-                            Getting your Cricket ID is simple! Follow these easy steps:
+                        <h2 data-aos="fade-up" data-aos-delay="500">How to Get Your Cricket ID?</h2>
+                        <p data-aos="fade-up" data-aos-delay="600">
+                            Follow these **simple steps** to get your **Online Cricket ID** today:
                         </p>
-                        <ol data-aos="fade-up" data-aos-delay="600">
-                            <li>Visit our website and click on the "Get Your Cricket ID" button.</li>
-                            <li>Fill in your details and choose your preferred payment method.</li>
-                            <li>Receive your Cricket ID and start betting on cricket matches instantly!</li>
+                        <ol data-aos="fade-up" data-aos-delay="700">
+                            <li>Click on the **"Get Your Cricket ID"** button below.</li>
+                            <li>Fill in your details and select a payment method.</li>
+                            <li>Receive your **verified Cricket ID instantly**.</li>
+                            <li>Log in and **start betting on live matches!**</li>
                         </ol>
-                        <p data-aos="fade-up" data-aos-delay="700">
-                            If you have any questions, feel free to contact our support team via WhatsApp or email.
+
+                        <h2 data-aos="fade-up" data-aos-delay="800">What Can You Bet On?</h2>
+                        <p data-aos="fade-up" data-aos-delay="900">
+                            Our **Cricket Betting ID** gives you access to **over 200+ games and multiple sports
+                            markets**:
                         </p>
-                        <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="800">
+                        <ul data-aos="fade-up" data-aos-delay="1000">
+                            <li>🏏 **IPL Betting ID** – Bet on every **IPL match with real-time odds**.</li>
+                            <li>🏆 **World Cup & International Matches** – From **ODIs to Test Cricket**.</li>
+                            <li>🎲 **Online Casino & Live Roulette** – Play casino games with **big winnings**.</li>
+                            <li>🎮 **Daily Fantasy Cricket & Virtual Sports** – Engage in **fantasy leagues**.</li>
+                            <li>⚡ **Live Betting & Instant Withdrawals** – Bet in real-time and withdraw your winnings
+                                fast.</li>
+                        </ul>
+
+                        <h2 data-aos="fade-up" data-aos-delay="1100">Secure Transactions & Reliable Payments</h2>
+                        <p data-aos="fade-up" data-aos-delay="1200">
+                            We provide **safe, secure, and instant deposits & withdrawals** with multiple payment
+                            options:
+                        </p>
+                        <ul data-aos="fade-up" data-aos-delay="1300">
+                            <li>✅ **UPI, Paytm, Google Pay, PhonePe, Bank Transfers**.</li>
+                            <li>✅ **Fast Payouts with No Hidden Fees**.</li>
+                            <li>✅ **Encrypted Transactions for Complete Safety**.</li>
+                        </ul>
+
+                        <h2 data-aos="fade-up" data-aos-delay="1400">Join Thousands of Happy Bettors!</h2>
+                        <p data-aos="fade-up" data-aos-delay="1500">
+                            We are India's **most trusted** **Cricket Betting ID** provider, offering a **safe and legal
+                            platform** to bet on cricket and other sports.
+                        </p>
+
+                        <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="1600">
                             <a href="https://wa.me/919376374447" class="main-btn btn-get-started">Get Your Cricket ID
                                 Now</a>
                         </div>
@@ -108,12 +151,13 @@
 
                     <!-- Right Column: Image -->
                     <div class="col-lg-6">
-                        <img src="assets/img/cricket-batting-id.jpeg" alt="Online Cricket ID" class="img-fluid"
-                            data-aos="zoom-in">
+                        <img src="assets/img/best-online-cricket-betting-id-provider.jpeg" alt="Online Cricket ID"
+                            class="img-fluid" data-aos="zoom-in">
                     </div>
                 </div>
             </div>
         </section>
+
 
 
 
