--- a/blog.html
+++ b/blog.html
@@ -46,18 +46,18 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Presento</h1>
-        <span>.</span>
+        <!-- <h1 class="sitename">MAHAKAL</h1> -->
+        <img src="./assets/img/header-logo.png" alt="Logo">
+        <!-- <span>.</span> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero">Home<br></a></li>
-          <li><a href="#Scores">Live Scores</a></li>
+          <li><a href="cricket-betting-id-whatsapp-number.html">Live Scores</a></li>
           <li><a href="#Betting">Betting Guide</a></li>
           <li><a href="blog.html" class="active">Blog</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -84,7 +84,38 @@
     </div><!-- End Page Title -->
 
     <div class="container">
-      <div class="row">
+      <h1 class="mt-2 mb-4 text-center fw-bolder">Our latest Blogs</h1>
+      <div class="blog-container mb-5">
+        <article class="blog-article">
+          <a class="blog-article-img-a" href="/Get-Cricket-ID-Online.html" tabindex="-1">
+            <div class="blog-article-img-div"><img loading="lazy" decoding="async" width="300" height="169"
+                src="assets/img/getcricketid2.jpeg" class="attachment-medium size-medium wp-image-5987"
+                alt="Cricket exchange"></div>
+          </a>
+          <div class="blog-article-content-div">
+            <h3>
+              <a href="#">
+                How to Get an Online Cricket ID for Betting? </a>
+            </h3>
+            <div class="blog-date">
+              <span class="elementor-post-date">
+                February 15, 2025 </span>
+            </div>
+            <div class="blog-front-content">
+              <p>Cricket is not just a sport; it’s a passion for millions of fans worldwide. With the rise of online
+                betting platforms, fans can now engage with the game in a whole new way by placing bets on their
+                favorite teams and players. If you’re new to online cricket betting, the first step is to get an Online
+                Cricket ID. This guide will walk you through the process step-by-step. </p>
+            </div>
+            <div class="blog-post-read-more">
+              <a href="/Get-Cricket-ID-Online.html"
+                aria-label="Read more about How to Get an Online Cricket ID for Betting?" tabindex="-1">
+                Read More » </a>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="row d-none">
 
         <div class="col-lg-8">
 
@@ -412,6 +443,7 @@
         </div>
 
       </div>
+
     </div>
 
   </main>
